# plymouth

./: .gitignore  .gitlab-ci.yml  AUTHORS  Makefile.am  README  TODO  autogen.sh  config.h.in  configure.ac  foo.txt
debian/: changelog  control  plymouth-theme-pop-text.install  plymouth-theme-pop-text.postinst  rules  (+1 more)
scripts/: Makefile.am  keymap-render.py  plymouth-populate-initrd  plymouth-populate-initrd.in  plymouth-set-default-plugin  plymouth-set-default-plugin.in  plymouth-set-default-theme.in  plymouth-update-initrd  plymouth-update-initrd.in  plymouth-update-initrd.sh  plymouth.spec
src/: Makefile.am  fedora-fade-in.c  main.c  ply-answer.c  ply-boot-client.c  ply-boot-client.h  ply-boot-protocol.h  ply-boot-server.c  ply-boot-server.h  ply-boot-splash-plugin.h  ply-boot-splash.c  ply-boot-splash.h  ply-event-loop.c  ply-event-loop.h  ply-frame-buffer.c  ply-frame-buffer.h  ply-image.c  ply-image.h  ply-init-control.c  ply-init-control.h  ply-list.c  ply-list.h  ply-logger.c  ply-logger.h  ply-terminal-session.c  ply-terminal-session.h  ply-terminal.c  ply-terminal.h  ply-utils.c  ply-utils.h  ply-video-buffer.c  ply-video-buffer.h  ply-window.c  ply-window.h  plymouth-1.pc.in  plymouthd.defaults  rhgb-client.c
src/client/: Makefile.am  ply-boot-client.c  ply-boot-client.h  plymouth.c
src/drm-escrow/: Makefile.am  plymouth-drm-escrow.c
src/libply/: Makefile.am  ply-array.c  ply-buffer.c  ply-buffer.h  ply-command-parser.c  ply-command-parser.h  ply-event-loop.c  ply-event-loop.h  ply-frame-buffer.c  ply-frame-buffer.h  ply-hashtable.c  ply-image.c  ply-image.h  ply-key-file.c  ply-key-file.h  ply-list.c  ply-list.h  ply-logger.c  ply-logger.h  ply-progress.c  ply-progress.h  ply-rectangle.c  ply-rectangle.h  ply-region.c  ply-region.h  ply-terminal-session.c  ply-terminal-session.h  ply-terminal.c  ply-terminal.h  ply-trigger.c  ply-trigger.h  ply-utils.c  ply-utils.h
src/libply-splash-core/: Makefile.am  ply-boot-splash-plugin.h  ply-boot-splash.c  ply-boot-splash.h  ply-console.c  ply-console.h  ply-device-manager.c  ply-device-manager.h  ply-keyboard.c  ply-keyboard.h  ply-pixel-buffer.c  ply-pixel-buffer.h  ply-pixel-display.c  ply-pixel-display.h  ply-renderer-plugin.h  ply-renderer.c  ply-renderer.h  ply-seat.c  ply-seat.h  ply-terminal.c  ply-terminal.h  ply-text-display.c  ply-text-display.h  ply-text-progress-bar.c  ply-text-step-bar.c
src/libply-splash-graphics/: Makefile.am  ply-animation.c  ply-capslock-icon.c  ply-entry.c  ply-image.c  ply-image.h  ply-keymap-icon.c  ply-label-plugin.h  ply-label.c  ply-label.h  ply-progress-animation.c  ply-progress-bar.c  ply-progress-bar.h  ply-throbber.c
src/libply/tests/: Makefile.am  ply-copy-dir-test.am  ply-copy-dir-test.c  ply-copy-test.am  ply-copy-test.c  ply-image-test.am  ply-progress-test.am
src/libplybootsplash/: Makefile.am  ply-animation.c  ply-animation.h  ply-answer.c  ply-answer.h  ply-boot-splash-plugin.h  ply-boot-splash.c  ply-console.c  ply-console.h  ply-entry.c  ply-entry.h  ply-image.c  ply-image.h  ply-keyboard.c  ply-label-plugin.h  ply-label.c  ply-label.h  ply-pixel-buffer.c  ply-pixel-buffer.h  ply-progress-animation.c  ply-progress-animation.h  ply-renderer-plugin.h  ply-renderer.c  ply-renderer.h  ply-terminal.c  ply-terminal.h  ply-text-progress-bar.c  ply-text-progress-bar.h  ply-text-pulser.c  ply-throbber.c  ply-throbber.h  ply-window.c  ply-window.h
src/plugins/: Makefile.am
src/plugins/controls/: Makefile.am
src/plugins/controls/label/: Makefile.am  plugin.c
src/plugins/renderers/: Makefile.am
src/plugins/renderers/drm/: Makefile.am  plugin.c  ply-renderer-driver.h  ply-renderer-i915-driver.c  ply-renderer-nouveau-driver.c  ply-renderer-radeon-driver.c
src/plugins/renderers/frame-buffer/: Makefile.am  plugin.c
src/plugins/renderers/x11/: Makefile.am  plugin.c
src/plugins/splash/: Makefile.am
src/plugins/splash/contact/: Makefile.am  plugin.c
src/plugins/splash/details/: plugin.c
src/plugins/splash/fade-in/: Makefile.am  plugin.c
src/plugins/splash/fade-throbber/: Makefile.am  plugin.c
src/plugins/splash/glow/: Makefile.am  plugin.c
src/plugins/splash/pulser/: plugin.c
src/plugins/splash/script/: Makefile.am  plugin.c  ply-scan.c  ply-scan.h  script-debug.c  script-debug.h  script-execute.c  script-execute.h  script-lib-image.c  script-lib-image.h  script-lib-image.script  script-lib-math.c  script-lib-math.h  script-lib-math.script  script-lib-plymouth.c  script-lib-plymouth.h  script-lib-sprite.c  script-lib-sprite.h  script-lib-sprite.script  script-lib-string.c  script-object.c  script-object.h  script-parse.c  script-parse.h  script-scan.c  script-scan.h  script.c  script.h  stringify.pl  ~script-lib-plymouth.c
src/plugins/splash/solar/: Makefile.am  plugin.c
src/plugins/splash/space-flares/: Makefile.am  plugin.c
src/plugins/splash/spinfinity/: Makefile.am  plugin.c
src/plugins/splash/text/: plugin.c
src/plugins/splash/throbgress/: Makefile.am  plugin.c
src/plugins/splash/tribar/: Makefile.am
src/plugins/splash/two-step/: Makefile.am  plugin.c
src/rhgb-client/: Makefile.am  ply-boot-client.h  rhgb-client.c
src/splash-plugins/: Makefile.am  fedora-fade-in.c
src/splash-plugins/details/: Makefile.am  details.c  plugin.c
src/splash-plugins/fade-in/: Makefile.am  plugin.c
src/splash-plugins/fedora-fade-in/: Makefile.am  fedora-fade-in.c
src/splash-plugins/fedora-fade-in/.deps/: fedora_fade_in_la-fedora-fade-in.Plo
src/splash-plugins/spinfinity/: Makefile.am  plugin.c  spinfinity.c  throbber.c  throbber.h
src/splash-plugins/text/: Makefile.am  plugin.c  text.c
src/tests/: Makefile  Makefile.am  Makefile.in  ply-boot-client-test.am  ply-boot-server-test.am  ply-boot-splash-test.am  ply-event-loop-test.am  ply-frame-buffer-test.am  ply-image-test.am  ply-init-control-test.am  ply-terminal-session-test.am  ply-terminal-test.am  ply-window-test.am
src/upstart-bridge/: ply-upstart-monitor.c  plymouth-upstart-bridge.c
src/viewer/: Makefile.am  plymouth-log-viewer.c
themes/script/: Makefile.am  script.script
(+67 files in other folders)
