SUBDIRS = src po scripts 

EXTRA_DIST = ChangeLog                                                         \
             README                                                            \
             intltool-extract.in                                               \
             intltool-merge.in                                                 \
             intltool-update.in

DISTCLEANFILES = intltool-extract                                              \
                 intltool-merge                                                \
                 intltool-update

MAINTAINERCLEANFILES = aclocal.m4                                              \
                       compile                                                 \
                       config.guess                                            \
                       config.h.in                                             \
                       config.h.in~                                            \
                       config.sub                                              \
                       configure                                               \
                       depcomp                                                 \
                       install-sh                                              \
                       intltool-extract.in                                     \
                       intltool-merge.in                                       \
                       intltool-update.in                                      \
                       ltmain.sh                                               \
                       Makefile.in                                             \
                       missing
