SUBDIRS = src scripts
DISTCHECK_CONFIGURE_FLAGS = --without-boot-entry

EXTRA_DIST = ChangeLog                                                         \
             README

MAINTAINERCLEANFILES = aclocal.m4                                              \
                       config.h.in                                             \
                       config.h.in~                                            \
                       config.sub                                              \
                       configure                                               \
                       Makefile.in
